force-app/main/default/objects/Mailchimp_Sync_Error__c/Mailchimp_Sync_Error__c.object-meta.xml
<CustomObject>
    <description>Represents an error that occurred during the Salesforce&lt;-&gt;Mailchimp sync process.</description>
    <label>Mailchimp Sync Error</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailchimp Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>