force-app/main/default/objects/Mailchimp_Sync_Error__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the error occurred on a specific contact, the contact on which it occurred</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mailchimp Sync Errors</relationshipLabel>
    <relationshipName>Mailchimp_Sync_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>