force-app/main/default/objects/Mailchimp_Sync_Error__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>A human-readable explanation specific to this occurrence of the problem.</description>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>