force-app/main/default/objects/Mailchimp_Sync_Error__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>What stage of the sync process the error occurred at</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Fetch contacts from Mailchimp</fullName>
            </value>
            <value>
                <fullName>1 - Add/update contacts in Mailchimp</fullName>
            </value>
            <value>
                <fullName>2 - Add/update tags in Mailchimp</fullName>
            </value>
            <value>
                <fullName>3 - Mark Salesforce contacts as synced</fullName>
            </value>
            <value>
                <fullName>4 - Check Mailchimp batch job status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>