force-app/main/default/objects/Mailchimp_Sync_Error__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>The HTTP status code of the error</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>