force-app/main/default/objects/Mailchimp_Sync_Error__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>A short summary of the problem type. It doesn&#39;t change based on the occurrence of the problem.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>