force-app/main/default/objects/Mailchimp_Sync_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>Title__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>